# wildfire-knx-stack

./: .travis.yml  Makefile.am  Wildfire_Config.h  configure.ac  lin.bat  testme.py
config/k-ps/: config.h
contrib/: ooc.c  ooc_str.c
contrib/Imex/: ImexReader.py  ImexWriter.py  XMLHTTPRequest.py  main.py
contrib/KNXToolChain/: APCI.py  DM.py  DPT.py  KNXIP_Tester.py  MG.py  NM.py
contrib/mETS/: ADDRESS_FORMAT.sql  COMPONENT_TYPE.sql  CURRENCY.sql  DBSchemaETS2_13.sql  DEVICE_INFO.sql  DEVICE_INFO_VALUE.sql  ETE_LANGUAGE.sql  IMEX_FILES.sql  IMEX_FS.sql  IMEX_KEYS.sql  IMEX_OMIT.sql  IMEX_TABLE_ORDER.sql  IMEX_WHERE_CLAUSE.sql  MANUFACTURER_COMPATIBILITY.sql  address.sql  bcu_type.sql  manufacturer.sql  mask.sql
contrib/mETS/PYmETS/: pyMySqlTests.kpf  (+1 more)
doc/: APCI_Typen.txt  BCU2_Status_requ.txt  Dateien.txt  Diverses.txt  EIBasic.txt  EIITTConnect.txt  EIITTConnect02.txt  EMI_IMI_Codes.txt  FT12.txt  Facts.txt  Info01.txt  KNXDevelKit.txt  KNXDevelKit02.txt  LTE_HEE_Artikel.txt  LayerDispatch_Performace.txt  PEI_IDENTIFY_con.txt  Produkte_und_Komponenten.txt  ReadMe.txt  Server.txt
inc/: AIL.h  AIL.h~  APCI.h  APCI.h~  Address.h  Address.h~  Appl.h  Appl.hpp  Appl.h~  Application.h  Application.h~  EMI_IMI2.h  EMI_IMI2.h~  KNXConfig.h  KNXConfig.hpp  KNXConv.h  KNXConv.h~  KNXDefs.h  KNXDefs.h~  KNXNwps.h  LoadControls.h  LoadControls.hpp  LoadControls.h~  Memory.h  Memory.hpp  Messaging.h  Messaging.h~  Network.h  Port.h  Port_Serial.h  StateMachineKNX.h  StateMachineKNX.hpp  StateMachineKNX.h~  Transport.h  Transport.hpp  Transport.h~  cemi.h  cemi.h~  ios.h  knx_address.h  (+78 more)
inc/link-layer/: knx_tpuart.h  uart_bif.h  uart_bif.hpp
inc/port/: port_serial.h  port_serial.hpp  port_sync.h  port_timer.h
inc/win/: Win_NVMem.h  Win_SerialProxy.h  Win_Timer.h  Win_Utils.h
port/: eep_hc12.h  target.h  target.h.bak
port/hc12/: config.h  eep_hc12.c  hc12def.h  serial.h
port/win32/: Port_Serial.c  Win_NVMem.c  Win_SerialProxy.c  Win_Timer.c  Win_Utils.c
python/: setup.py
src/: AIL.c  AIL.c~  ALG.c  ALG.c~  ALM.c  ALM.c~  Address.c  Appl.c  BABCU2.c  KNXConv.c  KNXNwps.c  KNXNwps.c~  Memory.c  Messaging.c  Messaging.c~  Network.c  Network.c~  Port.c  Posix_Serial.c  Routing.c  StateMachineKNX.c  config.c  config_internal.c  ios.c  ios.c~  knx_address.c  knx_ail.c  knx_alg.c  knx_alm.c  knx_conversion.c  knx_conversion.cpp  knx_debug.c  knx_disp.c  knx_disp.cpp  knx_et.c  knx_et.cpp  knx_ffipython.c  knx_ios.c  knx_layer_network.c  knx_lsm.c  (+26 more)
src/ex/: BABCU2.c
src/link-layer/: knx_tpuart.c  msgif_full.c  msgif_full.cpp  msgif_llonly.c  msgif_llonly.cpp  uart_bif.c  uart_bif.cpp
test/: Makefile  Wildfire_Config.h  common.py  dpffi.py  et.py  ffi.py  messaging.py  msg.py  test.py  test2.py  testMessaging.py  testUtl.py  uart_bif.py  utl.py
tools/: kstackf.i  setup.py
tools/kstack/: __init__.py
(+50 files in other folders)
